# tiny_SPH

./: CMakeLists.txt  README.md
src/: main.cpp  particle.cpp  particle.h  sph.cpp  sph.h  sphconfig.h  ui_widget.h  vec3.h  visualization.cpp  widget.ui
